--- a/src/ShowSubscribers.css
+++ b/src/ShowSubscribers.css
@@ -21,7 +21,7 @@
 }
 
 .add-btn {
-    background: #7ab97a;
+    background: #90ee90;
     color: #fff;
 }
 
@@ -59,5 +59,9 @@
 
 .back-btn{
     background: #87ceeb;
+    color: white;
+}
+.delete-btn{
+    background: #ff0000;
     color: white;
 }
